--- a/ga_scheduler/app/views/layouts/application.html.erb
+++ b/ga_scheduler/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav>
+  <% if current_user %>
+    Hello, <%= current_user.first_name %>
+    <%= link_to "Logout", session_path(session), method: :delete, confirm: "Sure you want to log out?" %>
+  <% else %>
+    <%= link_to "Login", login_path %>
+  <% end %>
+  </nav>
+
 
 <%= yield %>
 
