--- a/ga_scheduler/app/views/cohorts/index.html.erb
+++ b/ga_scheduler/app/views/cohorts/index.html.erb
@@ -1,8 +1,8 @@
 <% locations = Location.all %>
 <% locations.each do |l| %>
   <h3><%= "Courses in #{l.name}" %></h3>
-  <% crs = Course.where("location_id = ?", l.id) %>
-  <% crs.each do |c| %>
-    <li><%= link_to "#{c.program.name}", c.program %> </li>
+  <% chrts = select_cohorts_by_location(l) %>
+  <% chrts.each do |c| %>
+    <li><%= link_to "#{c.course.program.name}", c.course.program %> <%= "(#{c.start_date}–#{c.end_date})" %></li>
   <% end %>
 <% end %>
