--- a/ga_scheduler/app/views/cohorts/assign_teachers.html.erb
+++ b/ga_scheduler/app/views/cohorts/assign_teachers.html.erb
@@ -1,7 +1,7 @@
 <h2>This is the instructor assignment page for cohort <%= @cohort.name %> </h2>
 
 <%= form_for(@cohort) do |f| %>
-
+  <%= hidden_field_tag "user_type", "instructors"%>
   <div class="field">
     <% @users.each do |user| %>
       <%= check_box_tag "users[]" , user.id %>
