--- a/ga_scheduler/app/views/cohorts/index.html.erb
+++ b/ga_scheduler/app/views/cohorts/index.html.erb
@@ -3,6 +3,6 @@
   <h3><%= "Courses in #{l.name}" %></h3>
   <% chrts = select_cohorts_by_location(l) %>
   <% chrts.each do |c| %>
-    <li><%= link_to "#{c.course.program.name}", c.course.program %> <%= "(#{c.start_date}–#{c.end_date})" %></li>
+    <li><%= link_to "#{c.course.program.name}", c %> <%= "(#{c.start_date}–#{c.end_date})" %></li>
   <% end %>
 <% end %>
