--- a/ga_scheduler/app/views/classrooms/index.html.erb
+++ b/ga_scheduler/app/views/classrooms/index.html.erb
@@ -1,3 +1,6 @@
+<div class="button_container">
+  <%= link_to "Add a classroom", new_classroom_path, class: "button" %>
+</div>
 <% locations = Location.all %>
 <% locations.each do |l| %>
   <h3><%= "Classrooms in #{l.name}" %></h3>
