--- a/ga_scheduler/app/views/users/edit.html.erb
+++ b/ga_scheduler/app/views/users/edit.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_path(@user) %>
+<div class="button_container">
+<%= link_to 'Back', user_path(@user), class: "button" %>
+</div>
