--- a/ga_scheduler/app/views/users/index.html.erb
+++ b/ga_scheduler/app/views/users/index.html.erb
@@ -1,1 +1,7 @@
-Hi! This is the users index page!
+
+<h2>Users of GA Scheduler</h2>
+<ul>
+  <% @users.each do |user| %>
+    <li><%= link_to "#{user.full_name}", user %></li>
+  <% end%>
+</ul>
