--- a/ga_scheduler/app/views/cohorts/index.html.erb
+++ b/ga_scheduler/app/views/cohorts/index.html.erb
@@ -6,15 +6,18 @@
 <h2>Courses: individual cohorts</h2>
 
 <% courses = Course.all %>
-<% locations = courses.map { |course| course.location }.uniq %>
+<% courses_with_location = courses.select { |course| course.cohorts.count > 0} %>
+<% locations = courses_with_location.map { |course| course.location }.uniq %>
 <% locations.each do |l| %>
   <h3><%= "In #{l.name}" %></h3>
-  <% chrts = select_cohorts_by_location(l) %>
-  <% chrts.each do |c| %>
-    <li><%= link_to "#{c.course.program.name}", c %> <%= "(#{c.start_date}–#{c.end_date})" %> 
-      <% if can? :manage, Cohort %>
-        <small><%= link_to "Enroll students", enroll_path(c) %>, <%= link_to "Assign instructors", assign_teachers_path(c) %></small>
-        <% end %>
-    </li>
-  <% end %>
+       <% crs = l.courses %>
+           <% chts =  crs.map { |course| course.cohorts }.flatten %>
+
+            <% chts.each do |c| %>
+              <li><%= link_to "#{c.name}", c %> <%= "(#{c.start_date}–#{c.end_date})" %> 
+                <% if can? :manage, Cohort %>
+                  <small><%= link_to "Enroll students", enroll_path(c) %>, <%= link_to "Assign instructors", assign_teachers_path(c) %></small>
+                  <% end %>
+              </li>
+            <% end %>
 <% end %>
