--- a/ga_scheduler/app/views/courses/new.html.erb
+++ b/ga_scheduler/app/views/courses/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', courses_path %>
+<div class="button_container">
+  <%= link_to "Back", courses_path, class: "button" %>
+</div>
