--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,35 @@
-
 <h2>Users of GA Scheduler</h2>
-<ul>
-  <% @users.each do |user| %>
-    <li><%= link_to "#{user.full_name}", user %></li>
-  <% end%>
-</ul>
+<div id="user-index">
+</div>
+
+
+<!-- ===PREVIOUS CODE: SORTED USERS IN THE BACKEND (WITH RAILS)=======
+
+  <h3>Admins</h3>
+  <ul>
+    <% select_admins.each do |admin| %>
+      <li><%= link_to "#{admin.full_name}", admin %></li>
+    <% end%>
+  </ul>
+
+  <h3>Producers</h3>
+  <ul>
+    <% select_producers.each do |producer| %>
+      <li><%= link_to "#{producer.full_name}", producer %></li>
+    <% end%>
+  </ul>
+
+  <h3>Instructors</h3>
+  <ul>
+    <% select_instructors.each do |instructor| %>
+      <li><%= link_to "#{instructor.full_name}", instructor %></li>
+    <% end%>
+  </ul>
+
+  <h3>Students</h3>
+  <ul>
+    <% select_students.each do |student| %>
+      <li><%= link_to "#{student.full_name}", student %></li>
+    <% end%>
+  </ul> 
+-->
